; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_stream.c_vlclua_stream_read.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_stream.c_vlclua_stream_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"stream\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_stream_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_stream_read(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @luaL_checkudata(i32* %8, i32 1, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %10 = inttoptr i64 %9 to i32**
  store i32** %10, i32*** %5, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @luaL_checkinteger(i32* %11, i32 2)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32* @malloc(i32 %13)
  store i32* %14, i32** %7, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %1
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @vlclua_error(i32* %18)
  store i32 %19, i32* %2, align 4
  br label %40

20:                                               ; preds = %1
  %21 = load i32**, i32*** %5, align 8
  %22 = load i32*, i32** %21, align 8
  %23 = load i32*, i32** %7, align 8
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @vlc_stream_Read(i32* %22, i32* %23, i32 %24)
  store i32 %25, i32* %4, align 4
  %26 = load i32, i32* %4, align 4
  %27 = icmp sgt i32 %26, 0
  br i1 %27, label %28, label %34

28:                                               ; preds = %20
  %29 = load i32*, i32** %3, align 8
  %30 = load i32*, i32** %7, align 8
  %31 = bitcast i32* %30 to i8*
  %32 = load i32, i32* %4, align 4
  %33 = call i32 @lua_pushlstring(i32* %29, i8* %31, i32 %32)
  br label %37

34:                                               ; preds = %20
  %35 = load i32*, i32** %3, align 8
  %36 = call i32 @lua_pushnil(i32* %35)
  br label %37

37:                                               ; preds = %34, %28
  %38 = load i32*, i32** %7, align 8
  %39 = call i32 @free(i32* %38)
  store i32 1, i32* %2, align 4
  br label %40

40:                                               ; preds = %37, %17
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local i64 @luaL_checkudata(i32*, i32, i8*) #1

declare dso_local i32 @luaL_checkinteger(i32*, i32) #1

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @vlclua_error(i32*) #1

declare dso_local i32 @vlc_stream_Read(i32*, i32*, i32) #1

declare dso_local i32 @lua_pushlstring(i32*, i8*, i32) #1

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
